# RT_Test_Week7

./: CMakeLists.txt  README.md  testWeek7.cpp
data/: SphereReflection.pbm
